--- a/content/settings.json
+++ b/content/settings.json
@@ -1,11 +1,10 @@
 {
   "title": "SolHOP",
-  "url": "https://solhop.org",
+  "url": "https://solhop.netlify.app",
   "logo": {
     "light": "/logo-light.svg",
     "dark": "/logo-dark.svg"
   },
-  "github": "solhop/solhop.org",
-  "twitter": "solhoporg",
+  "github": "solhop/solhop.netlify.app",
   "defaultDir": ""
 }
